--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,10 @@
+B-202406034
+
++ Updated the team panels on the About page
++ Fixed a minor spacing issue in the footer
+
+
+
 B-202406033
 
 - Removed a temporary comment from style.css
