--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,9 @@
+B-202406035
+
++ Updated the community testimonial section of the home page
+
+
+
 B-202406034
 
 + Updated the team panels on the About page
