--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,10 @@
+B-202406042
+
++ Added a footnote to the community testimonial section of the Home page
++ Updated the member count of the community testimonial section of the Home page
+
+
+
 B-202406041
 
 + Updated the Attributions page
