--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,10 @@
+B-202406084
+
++ Updated the layout for all policy pages
+- Removed cookie controls banner entirely, as we do not use cookies
+
+
+
 B-202406083
 
 + Updated the "Contact Us" link on the Attributions page to include a pre-filled subject
