--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,9 @@
+B-202406111
+
++ Updated the pricing table layout on the Community Appeals page
+
+
+
 B-202406105
 
 + Fixed some local hyperlink issues
